Update jetpack from upstream