@@ -1,4 +1,4 @@
-export JRUBY_OPTS="--client -J-Xmx512m -J-Xms512m -J-Xmn128m -Xcext.enabled=true"
+export JRUBY_OPTS="--client -J-Xmx1024m -J-Xms512m -J-Xmn128m -J-XX:MaxPermSize=128m -Xcext.enabled=true"
 export PATH="$HOME/phantomjs/bin:$HOME/node/bin:$HOME/.rbenv/bin:$PATH"
 
 
